/*
 * $Id: ChangeLog,v 1.863 2003/03/21 05:23:30 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-03-21 13:32 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  - source/common/hbffind.c
  + source/rtl/hbffind.c
    -+ Moved hbffind.c to source/rtl as it's not used by compiler.

  * makefile.bc
    * Updated to reflect new location of hbffind.c

2003-03-20 21:22 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.c
    + Added WinMain guarded by #if defined(HB_OS_WIN_32)

2003-03-20 16:20 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/Makefile
  * source/rtl/Makefile
    * Modified to reflect new location of pplib.c.

2003-03-20 16:04 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  - source/compiler/simplex.c
  + include/simplex.c
    -+ Moved simplex to include folder as it is an #included file.

  * source/macro/macroslx.c
    * Modified #include as per new location of simplex.c

  - source/pp/pplib.c
  + source/rtl/pplib.c
    -+ Moved pp.lib to rtl folder as it's part of the RTL.

  * makefile.bc
    * Modified to reflect new location of pplib.c.

2003-03-20 17:05 UTC+0100 Patrick Mast <patrick@winfakt.com>
  * utils/hbmake/hbmake.prg
    ! Fixed bug in ResetInternalVars()

2003-03-20 16:21 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/hbreadini.prg
    + Added support for long lines using "\" as a terminator character.
      when the \ is not used as the last character of the line, it is
      not treated in any special way, so windows path are safe.

  * tests/parseini.ini
    + Added a LONG entry to demonstrate this feature.

2003-03-20 10:45 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * utils/hbmake/hbmake.prg
    ! minor changes, Also, when is an app generated make file, it
     ask the user if he want to build the final app
  * utils/hbmake/hbmutils.prg