@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.863 2003/03/21 05:23:30 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.864 2003/03/21 21:33:39 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-03-21 13:51 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * makefile.nt
+  * makefile.vc
+  * source/common/Makefile
+  * source/rtl/Makefile
+    * Updated to reflect new location of hbffind.c
 
 2003-03-21 13:32 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   - source/common/hbffind.c
